--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Unbabel Backend Coding Challenge">
+        <meta name="author" content="Adriano Alberto Borges Ramos">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block head %}
             <title>{{ title }}</title>
         {% endblock %}
