Added query filters Minor adjustments to template Ordered translations

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,25 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Translate Text</h2>
+    <h2>Translate text to English (EN)</h2>
     <form action="" method="post" novalidate>
         {{ form.input_field }}{{ form.submit }}
     </form>
-    <table>
-        <tr>
-            <th>Identification</th>
-            <th>Status</th>
-            <th>Original Text</th>
-            <th>Translation to Spanish (ES)</th>
-        </tr>
-        {% for translation in translations %}
-        <tr>
-            <td>{{ translation.uid }}</td>
-            <td>{{ translation.status }}</td>
-            <td>{{ translation.source_text }}</td>
-            <td>{{ translation.translated_text }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    {% if translations %}
+        <table>
+            <tr>
+                <th>Identification</th>
+                <th>Status</th>
+                <th>Original Text</th>
+                <th>Translation to Spanish (ES)</th>
+            </tr>
 
+                <hr>
+                {% for translation in translations %}
+                    <tr>
+                        <td>{{ translation.uid }}</td>
+                        <td>{{ translation.status }}</td>
+                        <td>{{ translation.source_text }}</td>
+                        <td>{{ translation.translated_text }}</td>
+                    </tr>
+                {% endfor %}
+        </table>
+    {% endif %}
+    <hr>
 {% endblock %}
