--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,24 +10,7 @@
         </div>
     </form>
     {{ form.csrf_token() }}
-    {% if translations %}
-        <table class="table table-dark table-striped table-hover">
-            <tr>
-                <th scope="col">Identification</th>
-                <th scope="col">Status</th>
-                <th scope="col">Original Text</th>
-                <th scope="col">Translation to Spanish (ES)</th>
-            </tr>
-                <hr>
-                {% for translation in translations %}
-                    <tr scope="row">
-                        <td>{{ translation.uid }}</td>
-                        <td>{{ translation.status }}</td>
-                        <td>{{ translation.source_text }}</td>
-                        <td>{{ translation.translated_text }}</td>
-                    </tr>
-                {% endfor %}
-        </table>
-    {% endif %}
+    <hr>
+    <div id="rt-table"></div>
     <hr>
 {% endblock %}
